# www.brdyorn.com

./: .gitignore  404.md  LICENSE  Makefile  README.md  brdyorn.com.cabal  index.html  site.hs
css/: genericons.css  style.css
posts/: call-construct-in-racket.md  classroom-scraper.md  death-of-a-scraper.md  feature_or_defect_p1.md  mongo-migration.md  natural-and-computer-languages.md  poet-test.md  postgres_savepoint.md  rest-exceptions-with-decorators.md  small-vps-site.md  three-laws-of-psychology.md
templates/: default.html  post.html  posts.html
