name:                brdyorn-dot-com
version:             0.0.0
synopsis:            homepage for brady ouren
description:         homepage for brady ouren
license:             BSD3
license-file:        LICENSE
author:              tippenein
maintainer:          tippenein@gmail.com
copyright:           2014 tippenein
category:            web
build-type:          Simple
cabal-version:       >=1.8

executable brdyorn.com
  hs-source-dirs:    src/
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5,
                     hakyll
